--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     />
     <meta name="author" content="Philosophy Portal" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=3" />
+    <link rel="shortcut icon" href="/favicon.ico?v=3" />
+
     <meta
       property="og:title"
       content="Philosophy Portal - Explore Eternal Questions"
